# brap

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: engine.rs  lib.rs  main.rs
src-tauri/src/brap_graph/: environment.rs  graph.rs  mod.rs  realizer.rs  ugen_nodes.rs
src-tauri/src/lowerer/: call.rs  expr.rs  lower.rs  mod.rs  tests.rs
src-tauri/src/parser/: lex.rs  mod.rs  parser.rs
