[package]
name = "brap"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jesse Raccio"]
edition = "2021"

[lib]
name = "brap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.18.1"
chumsky = "0.13.0"
fundsp = "0.23.0"
logos = "0.16.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.2"

